#218 Make java11 and java17 profiles activated automatically. activate java11 profile whenever jdk 11+ is active